--- a/style.css
+++ b/style.css
@@ -25,14 +25,12 @@ h2{
     margin-bottom: 4px;
     border-bottom: 2px solid #4a90e2;
 }
-.nav{
+nav{
     max-width: 800px;
     margin: 40px auto 20px auto; /* margin shows outside spacing */    
 }
 #about{
     max-width: 800px;
-    display: ;
-
     margin: 40px auto 20px auto; /* margin shows outside spacing */
     padding: 24px;
     border: 1px solid #999; /* temporary border to see layout */
@@ -48,7 +46,7 @@ h2{
     border-radius: 8px;
 }
 #ed{
-    font-size: 20px;"
+    font-size: 20px;
 }
 
 #skills{
